src/internal/vm/snapshots/hebi__internal__vm__tests__module_fail_to_parse.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test


# Result:
syntax error:
expected `(`

