src/internal/vm/snapshots/hebi__internal__vm__tests__module_not_found.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test


# Result:
runtime error: module `test` not found
