src/internal/vm/snapshots/hebi__internal__vm__tests__module_vars.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test

test.set(50)
test.get()


# Result:
Int(
    50,
)
