src/internal/vm/snapshots/hebi__internal__vm__tests__module_vars_per_module.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
import test

value := 200
test.set(50)
value = 0
test.get()


# Result:
Int(
    50,
)
