src/internal/vm/snapshots/hebi__internal__vm__tests__more_optional_access.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
"a" ?? "b"


# Result:
Object(
    "a",
)
