src/internal/vm/snapshots/hebi__internal__vm__tests__nested_optional_access.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := none

?v.a["b"].c ?? "test"


# Result:
Object(
    "test",
)
