src/internal/vm/snapshots/hebi__internal__vm__tests__nested_table.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {a: {b: 10}}
v


# Result:
Object(
    {
        "a": Object(
            {
                "b": Int(
                    10,
                ),
            },
        ),
    },
)
