src/internal/vm/snapshots/hebi__internal__vm__tests__none_equality.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
a := none
if a == none:
  print "a == none"
if a != none:
  print "a != none"


# Result:
None

# Output:
a == none

